V1.5.0: Identifier Option implemented